src/test/resources/syntax/invalid/group_definition_null_constant_for_int.unpick
unpick v3
const int
    null = Foo.bar